# Shopper_Spectrum_Customer_Segmentation

./: README.md  main.py  pyproject.toml  requirements.txt  train_models.py
models/: dbscan_model.pkl  kmeans_model.pkl  scaler.pkl
notebook/: shopper_spectrum.ipynb
src/: clustering.py  data_loader.py  preprocessing.py  recommendation.py  rfm.py  utils.py
